--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: statistikpackage
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Authors@R: c(
-    person(
-      "Jane", "Doe",
-      email = "jane@example.com",
-      role = c("aut", "cre")
-    )
-  )
-Description: More about what it does (maybe more than one line).
-    Continuation lines should be indented.
+Title: Package for statistics course
+Version: 2025.09.04
+Authors@R: 
+    person("Stefan", 
+            "Böcker", , 
+            "boecker.stefan@fh-swf.de", 
+            role = c("aut", "cre"),
+            comment = c(ORCID = "https://orcid.org/0000-0001-8714-6261"))
+Description: Package for the statistics course from Prof. Dr. Stefan Böcker, 
+  including useful functions, data, templates and examples, mainly for statistics,
+  machine learning, maths modules.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
